# tutorial_fastAPI

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_app1  Dockerfile_app2  README.md  docker-compose.yaml  pyproject.toml  run.py
app/: app.py
app/utils/: LoggerSingleton.py  ValidationCSVFile.py
app1/: pyproject.toml  run.py
app1/api/: app.py
app1/utils/: FakeData.py  ProcessingFile.py
app2/: app.py  pyproject.toml
app2/controllers/: todo_controller.py
utils/: ProcessingFile.py  ValidationCSVFile.py  ValidationMD5.py
